aap-opa/01-namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/instance: cluster-configs
  name: aap-opa
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  finalizers:
    - kubernetes
...
